--- a/index.css
+++ b/index.css
@@ -17,21 +17,16 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgb(244, 244, 244);
+    background-color: rgba(244, 244, 244, 0.5);
     
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1),
-    0 5px 10px rgba(0, 0, 0, 0.2),
-    0 10px 20px rgba(0, 0, 0, 0.3),
-    0 20px 40px rgba(0, 0, 0, 0.4),
-    inset 0 0 5px rgba(255, 255, 255, 0.4),
-    inset 0 5px 10px rgba(255, 255, 255, 0.3),
-    inset 0 10px 20px rgba(255, 255, 255, 0.2);
+    border: 4px solid white;
 
     display: flex;
+    justify-content: space-between;
 }
 
 .login{
-    margin: 3rem 0 0 4rem;
+    margin: 3rem 0 0 5rem;
 }
 
 input:focus:invalid{
@@ -43,5 +38,13 @@ input:focus:valid{
 }
 
 .register{
-    margin: 3rem 0 0 18rem;
+    margin: 3rem 5rem 0 0;
+}
+
+#username, #password, #name, #new_username, #new_password, #email, #verify{
+    background-color: rgba(244, 244, 244, 0.5);
+    border: none;
+    border-bottom: 1px solid black;
+    width: 13rem;
+    height: 1.5rem;
 }
