--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    background-color: #2B7A78;
+    background-image: url(mountain.png);
 }
 
 .container{
@@ -14,16 +14,29 @@ body{
     height: 500px;
     position: absolute;
     top: 50%;
-    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(244, 244, 244, 0.5);
-    
-    border: 4px solid white;
+    background-color: rgba(244, 244, 244, 0.8);
+
+    border: 4px solid rgba(37, 36, 36, 0.992);
 
     display: flex;
     justify-content: space-between;
 }
+
+.container::before {
+    border-radius: 20px;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    backdrop-filter: blur(1px); /* Adjust the blur radius as needed */
+    z-index: -1; /* Place the pseudo-element behind the container content */
+}
+
 
 .login{
     margin: 3rem 0 0 5rem;
