--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(244, 244, 244, 0.8);
+    /*background-color: rgba(244, 244, 244, 0.8);*/
 
     border: 4px solid rgba(37, 36, 36, 0.992);
 
@@ -33,13 +33,18 @@ body{
     right: 0;
     bottom: 0;
     background-size: cover;
-    backdrop-filter: blur(1px); /* Adjust the blur radius as needed */
+    backdrop-filter: blur(20px); /* Adjust the blur radius as needed */
     z-index: -1; /* Place the pseudo-element behind the container content */
 }
 
+.login h2,
+.register h2 {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
 
 .login{
-    margin: 3rem 0 0 5rem;
+    margin: 2rem 0 0 5rem;
 }
 
 input:focus:invalid{
@@ -51,13 +56,28 @@ input:focus:valid{
 }
 
 .register{
-    margin: 3rem 5rem 0 0;
+    margin: 2rem 5rem 0 0;
 }
 
 #username, #password, #name, #new_username, #new_password, #email, #verify{
-    background-color: rgba(244, 244, 244, 0.5);
+    
     border: none;
     border-bottom: 1px solid black;
     width: 13rem;
     height: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+button{
+    width: 100%;
+    height: 2rem;
+    font-weight: bold;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+}
+
+.bold{
+    color: white;
 }
