--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Ubuntu:wght@400;500;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 body{
@@ -9,32 +12,22 @@ body{
 }
 
 .container{
+    background: rgba(255, 253, 253, 0.08);
     border-radius: 20px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(20px);
+    border: 3px solid rgba(0, 0, 0, 1);
+
     width: 800px;
     height: 500px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /*background-color: rgba(244, 244, 244, 0.8);*/
-
-    border: 4px solid rgba(37, 36, 36, 0.992);
 
     display: flex;
     justify-content: space-between;
-}
-
-.container::before {
-    border-radius: 20px;
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-size: cover;
-    backdrop-filter: blur(20px); /* Adjust the blur radius as needed */
-    z-index: -1; /* Place the pseudo-element behind the container content */
 }
 
 .login h2,
@@ -47,25 +40,25 @@ body{
     margin: 2rem 0 0 5rem;
 }
 
-input:focus:invalid{
-    border: 1px solid red;
-}
-
-input:focus:valid{
-    border: 1px solid green;
-}
-
 .register{
     margin: 2rem 5rem 0 0;
 }
 
 #username, #password, #name, #new_username, #new_password, #email, #verify{
-    
     border: none;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
+    border-radius: 2px;
     width: 13rem;
     height: 1.5rem;
     margin-bottom: 1rem;
+    background: rgba(255, 253, 253, 0.08);
+    color: black;
+}
+
+ #username:focus, #password:focus, #name:focus, #new_username:focus, #new_password:focus, #email:focus, #verify:focus{ 
+    border: none;
+    border-bottom: 2px solid black;
+    outline: none;
 }
 
 button{
@@ -80,4 +73,19 @@ button{
 
 .bold{
     color: white;
+}
+
+.remember_text{
+    margin-bottom: 1.5rem;
+}
+
+/* MAKING THE LABELS ONLY APPEAR WHEN YOU CLICK THE INPUT */
+.login_user label,
+.login_pass label,
+.register1 label,
+.register2 label,
+.register3 label,
+.register4 label,
+.register5 label {
+    display: none; /* Initially hide all labels */
 }
